--- a/index.html
+++ b/index.html
@@ -5,9 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mein Name</title>
-    <!--<link rel="stylesheet" href="styles.css">-->
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 class="titel">Willkommen am Zukunftstag</h1>    
+    <img class="bodyimage" src="Känguru Logo.jpeg">
+    <h1 class="titel">Känguru</h1>  
+      
+
+    <div class="hintergrund">
+        <img class="byimage" src="schneekugel.jpeg">
+    </div>
+    <p>Berge zu verkaufen</p>
+
+    <div class="flexbox">
+        <p class="left">200000000 Fr</p> 
+        <p class="right">10 Fr</p>
+    </div>
+    <img class="byuimage" src="riesen berg.jpeg">
+    <img class="byimage" src="schneekugel.jpeg">
+
 </body>
 </html>
