--- a/index.html
+++ b/index.html
@@ -18,11 +18,27 @@
     <p>Berge zu verkaufen</p>
 
     <div class="flexbox">
-        <p class="left">200000000 Fr</p> 
-        <p class="right">10 Fr</p>
+        <div>
+            <p class="left">200000000 Fr</p> 
+            <img class="byuimage" src="riesen berg.jpeg">
+        </div>
+        
+        <div>
+            <p class="right">10 Fr</p>
+            <img class="byimage" src="schneekugel.jpeg">
+        </div>      
     </div>
-    <img class="byuimage" src="riesen berg.jpeg">
-    <img class="byimage" src="schneekugel.jpeg">
+
+    <div class="flexbox center-image">
+        <div>
+            <p class="links">Berge aus Stein  1000 Fr</p>
+        </div>
+        
+        <div>
+            <img class="byimage" src="schneekugel.jpeg">
+        </div>      
+    </div>
+
 
 </body>
 </html>
